--- a/app/scss/components/card.scss
+++ b/app/scss/components/card.scss
@@ -1,5 +1,35 @@
 @use '../util/' as *;
 
 .card {
-    padding: rem(20);
+    background: var(--dark-card);
+    color: --dark-text1;
+    &--facebook{
+
+    }
+    &--twitter{
+
+    }
+    &--instagram{
+
+    }
+    &--youtube{
+
+    }
+    &__platform{
+
+    }
+    &__icon {
+        &--facebook{
+
+        }
+        &--twitter{
+    
+        }
+        &--instagram{
+    
+        }
+        &--youtube{
+    
+        }
+    }
 }
