--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -13,6 +13,7 @@ body{
     font-family: var(--font-inter);
     background-color: var(--dark-bg);
     color: var(--dark-text2);
+    min-height: 150vh;
 }
 
 .visually-hidden{
